# personal-website

./: .babelrc  .env.example  .envrc.example  .eslintrc.yml  .git-blame-ignore-revs  .gitignore  .lazy.lua  .npmrc  .nvim.lua  .prettierrc.json  .prettierrc.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  TODO.md  amplify.yml  biome.json  build.ts  components.json  docker-compose.yaml  eslint.config.mjs  jsconfig.json  middleware.ts  next.config.js  package-lock.json  package.json  server.js  serverless.yaml  tailwind.config.js  tsconfig.json
.githooks/: commit-msg  pre-commit  pre-push  prepare-commit-msg
.serverless/: Template.json  Template.newApplicationName.AwsS3.json  Template.newApplicationName.CloudFront.json  _.json  (+8 more)
backend/: Cargo.toml  tmp.rs
backend/.sqlx/: query-35072a5622cc1c097bf1ef38fa15ca6a8cd0285b70c4a9f3ca280a4b2a15f09f.json  query-adb45d9e8cf4948beee34e21e7b950933dcd9cd206b6b5d5a440fdaad6ac6e8f.json  query-c401c65b0e1683cb082d2c585166313a2ba7b70cbf218e23afa591c15cf494c3.json  query-c87d4bad6266139c5507d0d03d628fc16f746cb8d1dd86d242d43733220d5827.json
backend/migrations/: 20241015165329_init.sql
backend/src/: account.rs  auth.rs  context.rs  db.rs  lib.rs  log.rs  main.rs  model.rs  persistence.rs  repo.rs  result.rs  user.rs
backend/src/auth/: jwt.rs  oauth.rs
backend/src/auth/oauth/: github.rs
backend/src/controller/: auth.rs  post.rs  user.rs
backend/src/http/: auth.rs  post.rs  user.rs
backend/src/model/: account.rs  post.rs  user.rs
backend/src/persistence/: pg.rs
backend/src/repo/: sql.rs
backend/src/repo/sql/: user.rs
(+216 files in other folders)
