[package]
name = "personal-website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
axum-macros = "0.4.1"
clap = { version = "4.5.15", features = ["derive", "env"] }
jsonwebtoken = "9.3.0"
oauth2 = "4.4.2"
reqwest = "0.12.8"
serde = { version = "1.0.204", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate" ] }
thiserror = "1.0.63"
tokio = { version = "1.38.1", features = ["full"] }
tower = "0.4.13"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
trait-variant = "0.1.2"
uuid = { version = "1.10.0", features = ["serde"] }
